--- a/InventarioPro/Client/Shared/MainLayout.razor
+++ b/InventarioPro/Client/Shared/MainLayout.razor
@@ -18,7 +18,7 @@
         <RadzenPanelMenu Style="background-color: transparent; color:white;">
             <RadzenPanelMenuItem Text="Home" Icon="home" Path="/" />
             <RadzenPanelMenuItem Text="Users" Icon="account_box" Path="/Counter"  />
-            <RadzenPanelMenuItem Text="Products" Icon="inventory" />
+            <RadzenPanelMenuItem Text="Products" Icon="inventory" Path="/ListProductos" />
             <RadzenPanelMenuItem Text="Suppliers" Icon="business" />
             <RadzenPanelMenuItem Text="Orders" Icon="assignment" />
             <RadzenPanelMenuItem Text="Reports" Icon="assessment" />
