Formulario de entrada

--- a/InventarioPro/Client/Shared/MainLayout.razor
+++ b/InventarioPro/Client/Shared/MainLayout.razor
@@ -19,6 +19,7 @@
             <RadzenPanelMenuItem Text="Home" Icon="home" Path="/" />
             <RadzenPanelMenuItem Text="Users" Icon="account_box" Path="/Counter"  />
             <RadzenPanelMenuItem Text="Products" Icon="inventory" Path="/ListProductos" />
+             <RadzenPanelMenuItem Text="ListaEntrada" Icon="inventory" Path="/ListaEntrada" />
             <RadzenPanelMenuItem Text="Suppliers" Icon="business" />
             <RadzenPanelMenuItem Text="Orders" Icon="assignment" />
             <RadzenPanelMenuItem Text="Reports" Icon="assessment" />
